# mot-eggs

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
.chglog/: config.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  release.yml
app/: Dockerfile  pyproject.toml
app/app/: .dockerignore  app.py  detect_mot.py  gradio_app.py  settings.py
app/app/core/: deps.py  log.py
app/app/ml/: best.pt
app/app/model_classes/: enums.py
app/app/models/: common.py
app/app/utils/: plots.py  utils.py
app/app/v1/: app.py
app/tests/: app_test.py  conftest.py
k8s/environments/demo/: autoscale.yaml  deployment.yaml  kustomization.yaml  service.yaml
k8s/environments/production/: deployment.yaml  gateway.yaml  kserve-onnx.yaml  kustomization.yaml  virtualservice.yaml
k8s/environments/sandbox/: autoscale.yaml  deployment.yaml  gateway.yaml  kserve-onnx.yaml  virtualservice.yaml
kserve-transformer/: Dockerfile  pyproject.toml
kserve-transformer/transformer/: __main__.py  transformer.py
terraform/environments/demo/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/environments/demo/.terraform/: terraform.tfstate
trainer/: Dockerfile  gcp-train-config.yaml  pyproject.toml
trainer/src/: .dockerignore
trainer/src/data/labelstudio/: label_studio.sqlite3
