[tool.poetry]
name = "mot-eggs-trainer"
version = "v0.0.1"
description = "Multiple object tracking of easter eggs in an app"
authors = ["Martin Højland Hansen (hojland93@gmail.com)"]

[tool.poetry.dependencies]
python = "^3.10.4"
transformers = "^4.26.0"
pandas = "^1.1.4"
numpy = "^1.19.4"
pydantic = "^1.7.2"
python-dotenv = "^0.15.0"
tqdm = "^4.60.0"
poethepoet = "^0.10.0"
google-cloud-storage = "^1.41.1"
pyarrow = "^8.0.0"
jmespath = "^0.10.0"
datasets = "^2.0.0"
loguru = "^0.5.3"
google-cloud-logging = "^2.6.0"
httpx = "^0.19.0"
sentry-sdk = "^1.5.12"
wandb = "^0.12.16"
optimum = {extras = ["onnxruntime"], version = "^1.6.3"}
accelerate = "^0.16.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
ipykernel = "^5.3.4"
ipywidgets = "^7.6.3"
jupyterlab = "^2.2.9"
mypy = "^0.770"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest-black = "^0.3.10"
pytest-clarity = "^0.3.0-alpha.0"
pytest-mock = "^3.3.1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
Faker = "^4.1.1"
poethepoet = "^0.10.0"
memory-profiler = "^0.60.0"

[tool.poetry.dev-dependencies.black]
version = "^22.6.0"
allow-prereleases = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black"
testpaths = "tests"

[tool.poe.env]
DS_BUILD_CPU_ADAM = "1"

[tool.poe.tasks]
install_cuda_torch = "pip3 install torch==1.13.0 --extra-index-url https://download.pytorch.org/whl/cu116"
install_cuda_deepspeed = "pip install deepspeed==0.7.5"
install_cuda_onnxruntime = "pip install optimum[onnxruntime-gpu]==1.3.0"
install_cpu_torch = "pip3 install torch --extra-index-url https://download.pytorch.org/whl/cpu"
install_cuda_libs = [ "install_cuda_torch", "install_cuda_deepspeed" ]
install_ml_cpu_libs = [ "install_cpu_torch" ]

[tool.black]
line-length = 135
target-version = [ "py38" ]
include = "\\.pyi?$"
exclude = """
/(
    \\.eggs         # exclude a few common directories in the
  | \\.git          # root of the project
  | \\.mypy_cache
  | \\.venv
  | \\.vscode
  | _build
  | buck-out
  | build
  | dist
  | tmp
)/
"""

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[build-system]
requires = [ "poetry>=1.1.8" ]
build-backend = "poetry.masonry.api"
